# expense-splitter

./: README.md  pyproject.toml
expense_splitter/: __init__.py  __main__.py  splitter.py
tests/: test_splitter.py
