[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-splitter"
version = "0.1.0"
description = "Split shared expenses fairly, in whole cents."
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["expense_splitter"]
